# БР1.2/Христофоров Владислав/labs/lab1/src/models/user.entity.ts
@@ -43,6 +43,9 @@ export class User {
     })
     role: string;
 
+    @Column({ default: false })
+    is_banned: boolean;
+
     @OneToMany(() => Recipe, (recipe: Recipe) => recipe.author)
     recipes: Recipe[];
 
